# Weather-Analysis

./: .gitignore  README.md  Untitled1.ipynb  app.py  pyproject.toml  requirements.txt  weather_analysis.py
.github/workflows/: ci.yml
config/: default.json
outputs_smoke/: report.md
src/weather_analysis/: __init__.py  config.py  data.py  features.py  modeling.py  pipeline.py  reporting.py
tests/: test_pipeline_smoke.py
