[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-analysis"
version = "0.1.0"
description = "Weather analysis and forecasting with Kaggle Delhi climate dataset"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.13.0",
  "scikit-learn>=1.3.0",
  "streamlit>=1.35.0",
  "altair>=5.3.0"
]

[project.optional-dependencies]
ml = ["xgboost>=2.0.0"]
dev = ["pytest>=8.0.0", "ruff>=0.5.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
